[package]
name = "symbol-map"
version = "1.0.1"
authors = ["Stu Black <trurl@freeshell.org>"]

description = "Memory-efficient mapping from values to integer identifiers (AKA a lexicon or symbol table), with options for fast bidirectional lookup"
documentation = "http://dstu.github.io/symbol-map/"
repository = "https://github.com/dstu/symbol-map"
readme = "README.org"
license = "Apache-2.0"

[dev-dependencies]
crossbeam = "0.2.*"
